1.7a
----

- Added 4 new services:
    - XTube
    - Zuuble
    - ZippyVideos (FLV & WMV videos)
    - Zedge

- Revised 1 service:
    - Tu.tv (yes, again... :P)

- Improved download speed avarage 
- Improved time remaining

1.6.1a
------

- Revised 1 service:
    - Tu.tv

- Fixed bug (Error: the app was closed if the drag&drop window was active and "Bug Report" was closed)
- Fixed bug (Error: dropped videos were corrupted)

- Improved TrayIcon (on double click over the tray icon, now the main form is restored)
- Improved internal parser functions

- Revised Spanish (ES) language file
- Revised Catalan (CAT) language file

1.6a
----

- Added 2 new services:
    - GameSpot
    - Stage6

- Revised 2 services:
    - Dailymotion (also updated Dailymotion icon)
    - Yuvutu

- Fixed bug (Error: fixed POST and GET methods in http class)
- Fixed bug (Error: invalid version comparation)

- Revised Polish (PL) language file

1.5a
----

- Added "Credits" form
- Added "Error Report" module
- Added 5 new services:
    - Tu.tv
    - Shufuni
    - Spike
    - MySpaceTv
    - CinemaVIP

- Revised 1 service:
    - Yahoo! Videos

- Changed "Proxy Port" max. value from "4999" to "9999"
- Changed "Proxy password" "Echo mode -> normal" to "Echo mode -> Password"
- Changed "xUpdater is missing" warning message, now is only displayed the first time (and not on each executation)

- Fixed bug (Error: when the xUpdater was missing, the videos were not downloaded)
- Fixed bug (Error: downloads directory modified in main form was not saved)
- Fixed bug (Error: some downloaded videos were corrupted by stupid http class bug)
- Fixed bug (Error: the button "check for updates" in Options is now deactivated if xUpdater is missing)
- Fixed bug (Error: Application updates didn't work!!! ***SHAME***)
- Fixed bug (Error: xUpdater was not launched as "detached process"!!! ***SHAME***)
- Fixed bug (Error: the "Checking updates" closed by "X" didn't cancel the update process)