@@ -186,6 +186,7 @@ MainFormImpl::MainFormImpl(QWidget * parent, Qt::WFlags f)
 	videoList->addVideo("http://www.zippyvideos.com/5095924715953276/flexible/");
 	videoList->addVideo("http://www.zippyvideos.com/7648675377380426/bask/");
 	videoList->addVideo("http://www.zedge.net/videos/30829/yuridia-video/");
+	videoList->addVideo("http://blip.tv/file/683334/");
 */
 
 /*
